<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:orientation="horizontal" 
        >
        <TextView 
            android:text="@string/etiqueta_id_periodo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <EditText 
            android:id="@+id/id_periodo"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>
        <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:orientation="horizontal" 
        >
        <TextView 
            android:text="@string/etiqueta_anio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <EditText 
            android:id="@+id/anio_periodo"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner_periodos"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:entries="@array/spinnerPeriodos"
          android:prompt="@string/textTitulo"></Spinner>
            
    </LinearLayout>
    <Button 
        android:id="@+id/boton_eliminar_periodo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_eliminar_periodo"
        android:onClick="eliminaPeriodoEscolar"        
        />
    <Button 
        android:id="@+id/boton_modificar_periodo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_modificar_periodo"
        android:onClick="guardaPeriodo"        
        />
    <Button 
        android:id="@+id/boton_regresar_periodo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_regresar_periodo"
        android:onClick="regresaALista"        
        />
    
</LinearLayout>
