<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:orientation="horizontal" 
        >
        <TextView 
            android:text="@string/etiqueta_clave_carrera"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <EditText 
            android:id="@+id/clave_carrera"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>
        <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:orientation="horizontal" 
        >
        <TextView 
            android:text="@string/etiqueta_nombre_carrera"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <EditText 
            android:id="@+id/nombre_carrera"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>
    <Button 
        android:id="@+id/boton_eliminar_carrera"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_eliminar_carrera"
        android:onClick="eliminaCarrera"        
        />
    <Button 
        android:id="@+id/boton_modificar_carrera"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_modificar_carrera"
        android:onClick="guardaCarrera"        
        />
    <Button 
        android:id="@+id/boton_regresar_carrera"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/etiqueta_boton_regresar_carrera"
        android:onClick="regresaALista"        
        />
    
</LinearLayout>
